--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,16 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>jitpack.io</id>
+			<name>jitpack</name>
+			<url>https://jitpack.io</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
 		<dependency>
@@ -48,6 +58,20 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.0</version>
+			</plugin>
+
+			<plugin>
+				<groupId>com.github.ThePerkinrex.ts-detector</groupId>
+				<artifactId>ts-detector-maven-plugin</artifactId>
+				<version>1.0.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>ts-detect</goal>
+						</goals>
+					</execution>
+				</executions>
+
 			</plugin>
 
 		</plugins>
